--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "elegant-bombolone-b64b05.netlify.app"
+baseURL = "https://elegant-bombolone-b64b05.netlify.app/"
 
 # Change the default theme to be use when building the site with Hugo
 theme = "LoveIt"
